# nyc-taxi-warehouse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dbt_project.yml  pyproject.toml
dbt/: dbt_project.yml
dbt/models/staging/: _sources.yml  _staging.yml  stg_rideshare_trips.sql  stg_yellow_trips.sql
dbt/seeds/: hvfhs_license.csv  rate_code.csv
models/: sources.yml
python-scripts/: bq_load_testing.py  gcp_testing.py  get_data.py  test.csv  test_gcs_upload.py
